--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -1,56 +1,77 @@
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Courgette&family=Inconsolata&family=Indie+Flower&family=Inter:wght@400;500;600;700&family=Irish+Grover&family=Lobster&family=Nunito:ital,wght@0,200;0,400;0,600;0,700;0,800;1,200;1,300;1,400;1,600;1,700;1,800&family=Pacifico&family=Playfair+Display:wght@700&family=Poppins:wght@300;400&family=Rampart+One&display=swap');
-*{
-  padding:0;
-  margin:0;
+* {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
- /* font-family: 'Poppins', sans-serif; */
- /* font-family: 'Playfair Display', serif; */
 
- /* navbar css */
- .navbar{
-  font-family: 'Poppins', sans-serif; 
+/* font-family: 'Poppins', sans-serif; */
+/* font-family: 'Playfair Display', serif; */
+
+/* //navbar css */
+.navbar {
+  font-family: "Poppins", sans-serif;
   font-size: 17px;
   line-height: 26px;
   text-transform: uppercase;
-  box-shadow:0 8px 6px -6px grey;
-  --webkit-box-shadow: 0 8px 6px -6px grey;
-  border-bottom: 0px solid grey !important;
- }
-  .nav-link{
-    font-weight: 300 !important;
-  }
-  .active{
-    border-bottom: 1px solid black;
-  }
-  .navbar-brand{
-    font-weight: 700;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    letter-spacing: 3px;
-  }
-  
+  box-shadow: 0 8px 6px -6px gray;
+  --webkit-box-shadow: 0 8px 6px -6px gray;
+  border-bottom: solid gray !important;
+}
 
- /* =============================
+.nav-link {
+  font-weight: 300 !important;
+}
+
+.active {
+  border-bottom: 2px solid black;
+}
+
+.navbar-brand {
+  font-weight: 700;
+  font-family: "roboto", sans-serif;
+  letter-spacing: 3px;
+}
+
+.search-form {
+  margin-right: 10px;
+  margin-top: 4px;
+}
+.search-form input {
+  border: none;
+  border-radius: 0;
+}
+.search-form button {
+  background-color: #000000;
+  border-radius: 0;
+  color: white;
+}
+
+/* =============================
 ==========footer============= */
 
-  .footer{
-    color:white;
-    padding:25px;
-    background: #000000;
-    background: --webkit-linear-gradient( to right, #434343,#000000);
-   background:linear-gradient(to right, #434343,#000000);
-  }
-  .footer a{
-    text-decoration: none;
-    color:white;
-    padding: 10px;
-  }
-  .footer a:hover{
-color:#ffefba;
-border-bottom: 1px solid #ffefba;
-  }
+.footer {
+  color: white;
+  padding: 25px;
+  background: #000000; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #434343,
+    #000000
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #434343, #000000);
+}
 
+.footer a {
+  text-decoration: none;
+  color: white;
+  padding: 10px;
+}
 
+.footer a:hover {
+  color: #ffefba;
+  border-bottom: 1px solid #ffefba;
+}
 /* =================================
 ======== page not found css ======= */
 .pnf {
@@ -82,7 +103,6 @@ border-bottom: 1px solid #ffefba;
   color: white;
 }
 /* ========================================= */
-/* ========================================= */
 /* =========contact us ========= */
 .contactus {
   margin: 0;
@@ -93,244 +113,34 @@ border-bottom: 1px solid #ffefba;
   justify-content: center;
 }
 
-
-
-
-
-/* ========================================= */
-/* =========register ========= */
-
-.register{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 70vh;
-  flex-direction: column;
-}
-/* ====================== */
-
-
-
-.product-link{
+/* ==================== */
+.product-link {
   text-decoration: none !important;
-  color:black !important;
+  color: black !important;
 }
 
-
-
-
-
-
-
-/* CategoryProductStyles.css */
-
-.category {
-  flex-wrap: wrap;
-  margin-top: 80px !important;
+.cat-btn {
+  padding: 40px 0px;
+  font-size: 24px;
+  text-transform: uppercase;
 }
-.category .card {
-  background-color: rgba(128, 128, 128, 0.097);
-  width: 18rem;
+.cat-btn:hover {
+  background-color: #434343;
+  color: white;
 }
-.category .card-name-price {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
+/* ================
+====dashboard
+=================== */
 
-.category .card-price {
-  color: green;
-  font-weight: bold;
-}
-.category button {
-  border-radius: 0;
-  width: 100%;
-  border-top-left-radius: 5px;
-  border-bottom-right-radius: 5px;
-  font-size: 14px;
-  font-weight: bold;
-}
-
-.category .card-text {
-  color: rgb(90, 89, 89);
-}
-
-.category .card img:hover {
-  transform: scale(0.9);
-}
-
-.category .card-img-top {
-  height: 300px !important;
-}
-/* CategoryProductStyles.css */
-/* Homepage.css */
-
-
-.banner-img {
-  margin-top: 60px;
-}
-
-.home-page h1 {
-  color: gray;
-  font-family: "Playfair Display", serif;
-}
-
-.home-page {
-  display: flex;
-  flex-wrap: wrap;
-}
-.home-page .card {
-  background-color: rgba(128, 128, 128, 0.097);
-  width: 18rem;
-}
-.home-page .card-name-price {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.home-page .card-price {
-  color: green;
-  font-weight: bold;
-}
-.home-page button {
-  border-radius: 0;
-  width: 100%;
-  border-top-left-radius: 5px;
-  border-bottom-right-radius: 5px;
-  font-size: 14px;
-  font-weight: bold;
-}
-
-.home-page .card-text {
-  color: rgb(90, 89, 89);
-}
-
-.home-page .card img:hover {
-  transform: scale(0.9);
-}
-
-.home-page .card-img-top {
-  height: 300px !important;
-}
-/* ==================
-filters
-============== */
-.filters h4 {
-  margin-top: 100px;
-  color: gray !important;
-  border-bottom: 1px solid rgba(128, 128, 128, 0.337);
-}
-
-.ant-checkbox-wrapper:first-of-type {
-  margin-left: 8px;
-}
-
-.ant-checkbox-wrapper {
-  margin: 2px;
-}
-.ant-radio-wrapper {
-  margin-bottom: 5px !important;
-  margin-left: 10px;
-}
-
-.filters button {
-  background-color: black;
-  width: 100%;
-  border: none;
-  border-radius: 0;
-  margin-top: 20px;
-}
-
-.loadmore {
-  color: green;
-  font-weight: bold;
-  font-size: 20px !important;
-}
-/* Homepage.css */
-/* ProductDetailsStyles.css */
-
-.product-details {
+.dashboard {
   margin-top: 100px !important;
 }
 
-.product-details-info {
-  display: flex;
-  flex-direction: column;
-  /* align-items: center; */
-  justify-content: center;
+.dashboard-menu h4 {
+  background-color: #434343 !important;
+  color: white;
+  padding: 20px 0px;
 }
 
-.product-details-info h6 {
-  margin-bottom: 20px !important;
-}
 
-.similar-products .card {
-  background-color: rgba(128, 128, 128, 0.097);
-  width: 18rem;
-}
 
-.similar-products .card-name-price {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.similar-products .card-price {
-  color: green;
-  font-weight: bold;
-}
-.similar-products button {
-  border-radius: 0;
-  width: 100%;
-  border-top-left-radius: 5px;
-  border-bottom-right-radius: 5px;
-  font-size: 14px;
-  font-weight: bold;
-}
-
-.similar-products .card-text {
-  color: rgb(90, 89, 89);
-}
-
-.similar-products .card img:hover {
-  transform: scale(0.9);
-}
-
-.similar-products .card-img-top {
-  height: 300px !important;
-}
-
-/* ProductDetailsStyles.css */
-/* CartStyles.css */
-.cart-page {
-  margin-top: 64px;
-}
-
-.cart-page h1 {
-  padding: 15px !important;
-  font-family: "roboto", sans-serif;
-  font-weight: normal;
-  background-color: rgba(0, 0, 255, 0.072) !important;
-}
-.cart-page h1 > p {
-  font-size: 20px;
-  margin-top: 10px;
-}
-
-.cart-page .card {
-  padding: 5px !important;
-  height: 150px !important;
-  margin-bottom: 5px !important;
-}
-.cart-page .cart-remove-btn {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.cart-page .cart-summary {
-  text-align: center;
-  /* margin-top: -140px !important; */
-}
-
-/* CartStyles.css */
