--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -10,6 +10,7 @@
 
 /* //navbar css */
 .navbar {
+  color:white;
   font-family: "Poppins", sans-serif;
   font-size: 17px;
   line-height: 26px;
@@ -17,10 +18,13 @@
   box-shadow: 0 8px 6px -6px gray;
   --webkit-box-shadow: 0 8px 6px -6px gray;
   border-bottom: solid gray !important;
+  background-image: linear-gradient(to left,#556868, #a19989);
 }
 
 .nav-link {
   font-weight: 300 !important;
+  color:white !important;
+ 
 }
 
 .active {
@@ -144,3 +148,26 @@
 
 
 
+.searchButton{
+  color: white;
+  border-color: white;
+}
+.searchButton:hover{
+  background-color: #a19989;
+}
+
+.wholeSearch{
+  margin-right: 26px;
+  margin-top: 4px;
+}
+
+.cartButton{
+  font-weight: 300 !important;
+  color:white !important;
+  font-size: 17px;
+  font-family: "Poppins", sans-serif;
+  
+}
+.form-container form{
+  margin-top:35px;
+}
